# weread-tui

./: .gitignore  AGENTS.md  CLAUDE.md  DEBUG_CHAPTER_PLAN.md  LICENSE  PLAN.md  README.md  SPEC.md  pyproject.toml
tests/: test_api.py  test_auth.py  test_browser.py  test_cli.py  test_parser.py  test_state.py  test_tui.py
weread/: __main__.py  api.py  auth.py  browser.py  cli.py  parser.py  state.py
weread/tui/: app.py  reader.py  shelf.py
